5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1582_1330.log
== TEST (2019-03-31 13:34:00) 
-- CODE:
round(250**3)
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:34:57) 
-- CODE:
round(250**3)
print(250***3)
-- ERROR:
File "XXXX", line 2
    print(250***3)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:35:06) 
-- CODE:
round(250**3)

-- EXECUTION TIME:
0.143058
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:36:09) 
-- CODE:
round(250**3)


-- ERROR:
File "XXXX", line 2
    print(250***3)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:36:41) 
-- CODE:
round(250**6)


-- ERROR:
File "XXXX", line 2
    print(250***3)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:36:48) 
-- CODE:
round(250**6)


-- EXECUTION TIME:
0.163589
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:38:22) 
-- CODE:
round(250**6)
print(250***6)


-- ERROR:
File "XXXX", line 2
    print(250***6)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:39:38) 
-- CODE:
round(250/6)
print(round)



-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:39:42) 
-- CODE:
round(250/6)
print(round)



-- EXECUTION TIME:
0.154695
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
<built-in function round>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:39:46) 
-- CODE:
round(250/6)
print(round)



-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:40:06) 
-- CODE:
round(250/6)
print(250/6)



-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:40:09) 
-- CODE:
round(250/6)
print(250/6)



-- EXECUTION TIME:
0.125276
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:40:24) 
-- CODE:
print(250/6)



-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:40:43) 
-- CODE:
print(250/6)
round(41.666)


-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:40:49) 
-- CODE:
print(250/6)
round(41.666)


-- EXECUTION TIME:
0.142425
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:41:24) 
-- CODE:
print(250/6)
round(41.666)


-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:42:05) 
-- CODE:
print(250/6)
round(41.666)
print(round)


-- OUTPUT:
41.666666666666664
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:42:25) 
-- CODE:
round(41.666)
print(round)


-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:42:43) 
-- CODE:
round(41.666)



-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:42:45) 
-- CODE:
round(41.666)



-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:42:46) 
-- CODE:
round(41.666)



-- EXECUTION TIME:
0.174612
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:43:02) 
-- CODE:
round(41.66)



-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:43:05) 
-- CODE:
round(41.66)



-- EXECUTION TIME:
0.183659
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:43:24) 
-- CODE:
round(41.66)
print(round)


-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:43:36) 
-- CODE:
round(41.66)
print(41.66)


-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:43:39) 
-- CODE:
round(41.66)
print(41.66)


-- EXECUTION TIME:
0.123321
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:44:00) 
-- CODE:
print(41.66round)


-- ERROR:
File "XXXX", line 1
    print(41.66round)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:44:07) 
-- CODE:
print(41.66 round)


-- ERROR:
File "XXXX", line 1
    print(41.66 round)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:44:30) 
-- CODE:
print(41.66)
round(41.66)


-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:44:32) 
-- CODE:
print(41.66)
round(41.66)


-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:44:33) 
-- CODE:
print(41.66)
round(41.66)


-- EXECUTION TIME:
0.126887
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:44:39) 
-- CODE:

round(41.66)


-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:44:41) 
-- CODE:

round(41.66)


-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:44:50) 
-- CODE:
round(41.66)


-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:44:53) 
-- CODE:
round(41.66)


-- EXECUTION TIME:
0.269407
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:45:31) 
-- CODE:
print(250/6)



-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:45:52) 
-- CODE:
print(250/6)
round(41.66)


-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:46:28) 
-- CODE:
print(250/6)
round(41*66)


-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:48:30) 
-- CODE:
print(round(250,6)


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:48:37) 
-- CODE:
print(round(250,6)


-- EXECUTION TIME:
0.202686
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 3
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:49:40) 
-- CODE:
print(round(250,2)


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:49:59) 
-- CODE:
print(round(250,6)


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:51:45) 
-- CODE:
print(round(41.66)


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:52:09) 
-- CODE:
print(round(41.66)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:52:19) 
-- CODE:
print(round(250,6)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:52:27) 
-- CODE:
print(round(250/6)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:55:55) 
-- CODE:
print(round(250/6)
-- EXECUTION TIME:
0.150791
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:56:00) 
-- CODE:
print(round(250/6)
-- EXECUTION TIME:
0.128418
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:56:23) 
-- CODE:
print(round(250/6)
-- EXECUTION TIME:
0.123387
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:57:39) 
-- CODE:
print (round(250,6))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:57:44) 
-- CODE:
print (round(250,6))
-- EXECUTION TIME:
0.219269
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:58:01) 
-- CODE:
print(round(250,6)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:02:04) 
-- CODE:
print(round(250,6
-- ERROR:
File "XXXX", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:02:14) 
-- CODE:
print(round(250,6
-- ERROR:
File "XXXX", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:02:41) 
-- CODE:
print(round"250,6)
-- ERROR:
File "XXXX", line 1
    print(round"250,6)
                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:02:51) 
-- CODE:
print(round(250,6)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:02:58) 
-- CODE:
print(round (250,6)
-- ERROR:
File "XXXX", line 2
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:03:09) 
-- CODE:
print (round (250,6)
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:03:25) 
-- CODE:
print(roun(250, 6)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:03:37) 
-- CODE:
print(round(250, 6)
-- ERROR:
File "XXXX", line 2
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:05:25) 
-- CODE:
print(round(250, 6))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:05:28) 
-- CODE:
print(round(250, 6))
-- EXECUTION TIME:
0.133987
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:05:37) 
-- CODE:
print(round(250,6))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:05:39) 
-- CODE:
print(round(250,6))
-- EXECUTION TIME:
0.179581
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:06:05) 
-- CODE:
print(round(centavos 250,6))
-- ERROR:
File "XXXX", line 1
    print(round(centavos 250,6))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:06:14) 
-- CODE:
print(round(250,6))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:06:23) 
-- CODE:
print(round(250,6))
-- EXECUTION TIME:
0.121711
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:07:15) 
-- CODE:
print(round(41,66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:07:18) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.148218
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:07:44) 
-- CODE:
print(round(250/4,2))
-- OUTPUT:
62.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:07:48) 
-- CODE:
print(round(250/4,2))
-- EXECUTION TIME:
0.211207
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:08:10) 
-- CODE:
print(round(250/4, 2))
-- OUTPUT:
62.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:08:13) 
-- CODE:
print(round(250/4, 2))
-- EXECUTION TIME:
0.134706
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:08:48) 
-- CODE:
print(round(250/4, 2)
-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:08:52) 
-- CODE:
print(round(250/4, 2))
-- OUTPUT:
62.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:08:55) 
-- CODE:
print(round(250/4, 2))
-- EXECUTION TIME:
0.196918
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:09:00) 
-- CODE:
print(round(250/4, 2))
-- EXECUTION TIME:
0.129774
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:09:02) 
-- CODE:
print(round(250/4,2))
-- EXECUTION TIME:
0.113657
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:09:53) 
-- CODE:
print(round(250/4,2))
-- EXECUTION TIME:
0.159198
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:10:03) 
-- CODE:
print(round(250/4,2))
-- EXECUTION TIME:
0.144278
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:10:04) 
-- CODE:
print(round(250/4,2))
-- EXECUTION TIME:
0.152917
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:10:05) 
-- CODE:
print(round(250/4,2))
-- EXECUTION TIME:
0.115156
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:35:18) 
-- CODE:
x=250
print(round(x,2))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:35:36) 
-- CODE:
x=250
print(round(x,2))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:35:36) 
-- CODE:
x=250
print(round(x,2))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:35:36) 
-- CODE:
x=250
print(round(x,2))
-- EXECUTION TIME:
0.154129
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:37:05) 
-- CODE:
x=250
print(round(x,2))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:37:09) 
-- CODE:
x=250
print(round(x,2))
-- EXECUTION TIME:
0.126091
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:37:18) 
-- CODE:
x=250
print(round(x,2))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:37:51) 
-- CODE:
print(round(250/4,2))
-- OUTPUT:
62.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:37:53) 
-- CODE:
print(round(250/4,2))
-- EXECUTION TIME:
0.137217
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:38:25) 
-- CODE:
x=250/6
print(round(x,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:38:31) 
-- CODE:
x=250/6
print(round(x,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:38:41) 
-- CODE:
x=250/4
print(round(x,2))
-- OUTPUT:
62.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:38:45) 
-- CODE:
x=250/4
print(round(x,2))
-- EXECUTION TIME:
0.17547
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:39:36) 
-- CODE:
x=250/6
print(round(x,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:39:40) 
-- CODE:
x=250/6
print(round(x,2))
-- EXECUTION TIME:
0.128062
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
